o Modified killed threads.  Callback from killed state before recycle/delete.
o Added const to more functions in gmThread.

16/06/07
o Fix bug relating to thread stack resize gmThread::Touch(). Thanks DrEvil.
o Build .EXEs with VC2005 SP1, static linked VC runtimes except for Debugger which uses MFC.
  Get vcredist_x86.exe from http://www.microsoft.com/downloads/details.aspx?familyid=200B2FD9-AE1A-4A14-984D-389C36F85647&displaylang=en or search for "Microsoft Visual C++ 2005 SP1 Redistributable Package" if needed.

22/10/07
o Added gmMachine::BindLibToFunction() Just a call through to existing gmLibHooks.
o Changed gmGCRoot<>::Set() to handle null.
o Removed a_filename from gmMachine::ExecuteFunction() since it wasn't used and could confuse users.

11/11/07
o Modified all GM_*_PARAM() and added overloads for all gmThread:Param*(), to check if invalid type was present.
o Modified threadKill() to ignore threads with invalid Id instead of killing current thread.

01/02/08
o Change gmScanner.l so parser checks for End Of File, to prevent endless loop.

11/04/09
o Add GM_CHECK_THIS_* macros to gmThread.h.  Thanks Downgraded.
o Add experimental and optional fork instruction.  Configured as GM_USE_FORK in gmConfig.h. Thanks HiVision.

12/04/09
o Add experimental foreach support for user types. Configured as GM_USER_FOREACH in gmConfig.h.  Thanks Downgraded.

23/04/09
o Add gmMachine::GetTypeId() to retrieve type id from string name. Thanks Downgraded.
o Updated version number, oops.

02/05/09
o Fixed getind in gmThread.cpp where usertypes influenced the operator chosen to process. Thanks DrEvil.

06/05/09
o Add experimental endon() allowing a thread to be killed when signalled. Enabled with GM_USE_ENDON in gmConfig.h.  Thanks Downgraded.
o Fixed (hopefully) endon() kills threads correctly and gets along with other blocks and signals.

05/06/09
o Fix and improve format() Thanks DrEvil.
o Add some more gmVariable accessors (similar to gm_ex)