@@ -650,7 +650,9 @@ static int GM_CDECL gmBlock(gmThread * a_thread) // var, ...
   }
   else if(res == -2)
   {
-    return GM_SYS_YIELD;
+    // Failed to block, so exception to prevent undefined or unexpected behavior
+    GM_EXCEPTION_MSG("cannot block on null");
+    return GM_EXCEPTION;
   }
   a_thread->Push(a_thread->Param(res));
   return GM_OK;
